objects/Opportunity_Pursuit_Resource_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval</label>
        <referenceTo>Approval__c</referenceTo>
        <relationshipLabel>Opportunity Pursuit Resource Requirement</relationshipLabel>
        <relationshipName>Opportunity_Pursuit_Resource_Requirement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_End_Date__c</fullName>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pursuit_Team_Name_Role__c</fullName>
        <label>Pursuit Team Name/Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_subregion_Country__c</fullName>
        <label>Region/subregion/Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Hours__c</fullName>
        <label>Requested Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Pursuit Resource Requirement</label>
    <nameField>
        <label>Opportunity Pursuit Resource Requirement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Pursuit Resource Requirement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Requested_Hours_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Requested_Hours__c &lt; 0</errorConditionFormula>
        <errorMessage>Request hours should not be a negative number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDate_EndDate_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(Estimated_End_Date__c  &lt;  Estimated_Start_Date__c) ||  (Estimated_Start_Date__c &lt; TODAY()) ||  (Estimated_End_Date__c  &lt; TODAY())</errorConditionFormula>
        <errorMessage>Please correct the start and End Date</errorMessage>
    </validationRules>
</CustomObject>